tests/ui/pin-ergonomics/pattern-matching-mix-deref-pattern.deref_patterns.stderr
error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:42:22
   |
LL |     let _ = || match foo.as_mut() {
   |                      ^^^^^^^^^^^^
LL |
LL |         Foo { x, y } => {}
   |               -  - ...and here
   |               |
   |               data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing the pattern binding
   |
LL |         Foo { ref x, y } => {}
   |               +++
help: consider borrowing the pattern binding
   |
LL |         Foo { x, ref y } => {}
   |                  +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:32:24
   |
LL |     let Foo { x, y } = foo.as_mut();
   |               -  -     ^^^^^^^^^^^^
   |               |  |
   |               |  ...and here
   |               data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing the pattern binding
   |
LL |     let Foo { ref x, y } = foo.as_mut();
   |               +++
help: consider borrowing the pattern binding
   |
LL |     let Foo { x, ref y } = foo.as_mut();
   |                  +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:36:11
   |
LL |     match foo.as_mut() {
   |           ^^^^^^^^^^^^
LL |
LL |         Foo { x, y } => {}
   |               -  - ...and here
   |               |
   |               data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing the pattern binding
   |
LL |         Foo { ref x, y } => {}
   |               +++
help: consider borrowing the pattern binding
   |
LL |         Foo { x, ref y } => {}
   |                  +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:61:22
   |
LL |     let _ = || match foo {
   |                      ^^^
LL |
LL |         Foo { x, y } => {}
   |               -  - ...and here
   |               |
   |               data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing here
   |
LL |     let _ = || match &foo {
   |                      +

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:51:24
   |
LL |     let Foo { x, y } = foo;
   |               -  -     ^^^
   |               |  |
   |               |  ...and here
   |               data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing the pattern binding
   |
LL |     let Foo { ref x, y } = foo;
   |               +++
help: consider borrowing the pattern binding
   |
LL |     let Foo { x, ref y } = foo;
   |                  +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:55:11
   |
LL |     match foo {
   |           ^^^
LL |
LL |         Foo { x, y } => {}
   |               -  - ...and here
   |               |
   |               data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing the pattern binding
   |
LL |         Foo { ref x, y } => {}
   |               +++
help: consider borrowing the pattern binding
   |
LL |         Foo { x, ref y } => {}
   |                  +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:80:22
   |
LL |     let _ = || match bar.as_mut() {
   |                      ^^^^^^^^^^^^
LL |
LL |         Bar(x, y) => {}
   |             -  - ...and here
   |             |
   |             data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing the pattern binding
   |
LL |         Bar(ref x, y) => {}
   |             +++
help: consider borrowing the pattern binding
   |
LL |         Bar(x, ref y) => {}
   |                +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:70:21
   |
LL |     let Bar(x, y) = bar.as_mut();
   |             -  -    ^^^^^^^^^^^^
   |             |  |
   |             |  ...and here
   |             data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing the pattern binding
   |
LL |     let Bar(ref x, y) = bar.as_mut();
   |             +++
help: consider borrowing the pattern binding
   |
LL |     let Bar(x, ref y) = bar.as_mut();
   |                +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:74:11
   |
LL |     match bar.as_mut() {
   |           ^^^^^^^^^^^^
LL |
LL |         Bar(x, y) => {}
   |             -  - ...and here
   |             |
   |             data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing the pattern binding
   |
LL |         Bar(ref x, y) => {}
   |             +++
help: consider borrowing the pattern binding
   |
LL |         Bar(x, ref y) => {}
   |                +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:99:22
   |
LL |     let _ = || match bar {
   |                      ^^^
LL |
LL |         Bar(x, y) => {}
   |             -  - ...and here
   |             |
   |             data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing here
   |
LL |     let _ = || match &bar {
   |                      +

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:89:21
   |
LL |     let Bar(x, y) = bar;
   |             -  -    ^^^
   |             |  |
   |             |  ...and here
   |             data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing the pattern binding
   |
LL |     let Bar(ref x, y) = bar;
   |             +++
help: consider borrowing the pattern binding
   |
LL |     let Bar(x, ref y) = bar;
   |                +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:93:11
   |
LL |     match bar {
   |           ^^^
LL |
LL |         Bar(x, y) => {}
   |             -  - ...and here
   |             |
   |             data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait
help: consider borrowing the pattern binding
   |
LL |         Bar(ref x, y) => {}
   |             +++
help: consider borrowing the pattern binding
   |
LL |         Bar(x, ref y) => {}
   |                +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:108:31
   |
LL |     let NonPinProject { x } = foo;
   |                         -     ^^^
   |                         |
   |                         data moved here because `x` has type `T`, which does not implement the `Copy` trait
   |
help: consider borrowing the pattern binding
   |
LL |     let NonPinProject { ref x } = foo;
   |                         +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:113:31
   |
LL |     let NonPinProject { x } = bar;
   |                         -     ^^^
   |                         |
   |                         data moved here because `x` has type `U`, which does not implement the `Copy` trait
   |
help: consider borrowing the pattern binding
   |
LL |     let NonPinProject { ref x } = bar;
   |                         +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:119:11
   |
LL |     match foo {
   |           ^^^
LL |
LL |         NonPinProject { x } => {}
   |                         - data moved here because `x` has type `T`, which does not implement the `Copy` trait
   |
help: consider borrowing the pattern binding
   |
LL |         NonPinProject { ref x } => {}
   |                         +++

error[E0507]: cannot move out of a shared reference
  --> $DIR/pattern-matching-mix-deref-pattern.rs:127:11
   |
LL |     match bar {
   |           ^^^
LL |
LL |         NonPinProject { x } => {}
   |                         - data moved here because `x` has type `U`, which does not implement the `Copy` trait
   |
help: consider borrowing the pattern binding
   |
LL |         NonPinProject { ref x } => {}
   |                         +++

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0507`.
